--- a/styles.css
+++ b/styles.css
@@ -94,10 +94,10 @@ h1 {
 .group-btn {
   width: 60%;
   color: #333; 
-  overflow: scroll;
   text-overflow: ellipsis;
   display: flex;
   justify-content: left;
+  overflow: hidden;
 }
 
 /* .group-btn i: Icon for group button */
