--- a/styles.css
+++ b/styles.css
@@ -59,11 +59,6 @@ h1 {
   width: 100%;
 }
 
-/* .tabs-display-section: Section for displaying tabs */
-.tabs-display-section {
-  width: 100%;
-}
-
 /* .color-choice-btn: Button for choosing colors */
 .color-choice-btn {
   width: 30px;
@@ -143,6 +138,14 @@ h1 {
   background-color: #e0e0e0;
 }
 
+.tabssection {
+  width: 100%;
+  padding: 10px;
+  margin: 5px;
+  align-items: center;
+  justify-content: left;
+}
+
 .tab-close-btn {
   margin-left: 10px;
   background-color: transparent;
@@ -159,6 +162,7 @@ h1 {
   width: 90%;
   height: 25px;
   padding: 10px;
+  margin-bottom: 10px;
   margin-left: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
